# KApp

./: .gitignore  KApp.sln  LICENSE  README.md  cloc.bat  convert-utf8.bat  convert-utf8.py  copy-qt-denpency.bat  dist.bat
Android/CMake/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/FreeImage/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibJPEG/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibJXR/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibOpenJPEG/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibPNG/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibRawLite/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibTIFF4/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/LibWebP/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/OpenEXR/: CMakeLists.txt
Android/CMake/Dependency/FreeImage/ZLib/: CMakeLists.txt
Android/CMake/Dependency/Python27/: CMakeLists.txt
Android/CMake/Dependency/assimp-3.3.1/code/: CMakeLists.txt
Android/CMake/Dependency/assimp-3.3.1/contrib/: CMakeLists.txt
Android/CMake/Dependency/assimp-3.3.1/contrib/zlib/: CMakeLists.txt
Android/CMake/Dependency/boost/: CMakeLists.txt
Android/CMake/Dependency/imgui/: CMakeLists.txt
Android/CMake/Dependency/tinyxml2/: CMakeLists.txt
Android/CMake/Dependency/zip/: CMakeLists.txt
Android/CMake/Dependency/zlib/: CMakeLists.txt
Android/CMake/KBase/: CMakeLists.txt
Android/CMake/KEngine/: CMakeLists.txt
Android/CMake/KRender/: CMakeLists.txt
Android/app/: build.gradle
Dependency/FreeImage/: FreeImage.sln  Quantizers.h  ToneMapping.h
Dependency/NsightAftermath/: LICENSE  Readme.md  nsight-aftermath-usage-guidelines.txt
Dependency/Python27/: python27.vcxproj  python27.vcxproj.filters
Dependency/SPIRV-Cross/: SPIRV-Cross.vcxproj  SPIRV-Cross.vcxproj.filters
Dependency/SPIRV-Tools-2022.3/: build-version.inc  core.insts-unified1.inc  enum_string_mapping.inc  extension_enum.inc  generators.inc  nonsemantic.clspvreflection.insts.inc  operand.kinds-unified1.inc
Dependency/assimp-3.3.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  revision.h  uninstall.vcxproj  uninstall.vcxproj.filters
Dependency/boost/: boost.vcxproj  boost.vcxproj.filters  helloworld.cpp
Dependency/glfw3/: ReadMe.txt  glfw3.vcxproj  glfw3.vcxproj.filters
Dependency/glslang/: CHANGES.md
Dependency/imgui/: imgui.vcxproj  imgui.vcxproj.filters
Dependency/metis-5.1.0/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Dependency/rttr-0.9.7/: rttr.vcxproj  rttr.vcxproj.filters
Dependency/tinyxml2/: CMakeLists.txt  tinyxml2.vcxproj  tinyxml2.vcxproj.filters
Dependency/zip-0.1.16/: zip.vcxproj  zip.vcxproj.filters
Dependency/zlib/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  zlibstatic.vcxproj
KApp/: KApp.cpp  KApp.vcxproj  KApp.vcxproj.filters  KCodecTest.cpp  KJsonTest.cpp  KReflectionTest.cpp  KScriptTest.cpp  KSocketTest.cpp  KSwapChainTest.cpp  KTaskTest.cpp  KVulkanTest.cpp  KXMLTest.cpp  public.glh  shader.vert
KApp/Shaders/: cameracube.vert  cube.frag  cube.vert  debug.frag  debug.vert  debugquad.frag  demo.frag  diffuse.frag  diffuse.vert  postprocess2.frag  postprocess3.frag  prez.frag  public.glh  screenquad.frag  screenquad.vert  shader.frag  shader.vert  shadow.frag  shadow.vert  uioverlay.frag  uioverlay.vert
KBase/: KBase.vcxproj  KBase.vcxproj.filters
KBase/Interface/: IKAssetLoader.h  IKCodec.h  IKConfig.h  IKDataStream.h  IKEntity.h  IKFileSystem.h  IKFileTool.h  IKIniFile.h  IKJson.h  IKLog.h  IKMemory.h  IKRefObject.h  IKReflection.h  IKRunable.h  IKScript.h  IKSocket.h  IKSourceFile.h  IKXML.h
KBase/Internal/: KAssetIOHooker.cpp  KAssetIOHooker.h  KAssetLoader.cpp  KAssetLoader.h  KCodec.cpp  KCodec.h  KComponentManager.cpp  KComponentManager.h  KDataStream.cpp  KDataStream.h  KDebugUtility.cpp  KDump.cpp  KEntity.cpp  KEntity.h  KEntityManager.h  KFileSystem.cpp  KFileSystem.h  KFileTool.cpp  KHash.cpp  KHashString.cpp  KIniFile.cpp  KIniFile.h  KLockQueue.h  KLog.cpp  KLog.h  KMemoryAllocator.cpp  KMemoryAllocator.h  KPlatform.cpp  KProcess.cpp  KPythonCore.cpp  KPythonCore.h  KScript.cpp  KSemaphore.h  KSocketClient.cpp  KSocketClient.h  KSocketServer.cpp  KSocketServer.h  KSourceFile.cpp  KSourceFile.h  KSpinLock.h  (+8 more)
KBase/Publish/: KAABBBox.h  KConfig.h  KDebugUtility.h  KDump.h  KEvent.h  KFileTool.h  KHandleRetriever.h  KHash.h  KHashString.h  KImage.h  KInput.h  KList.h  KLockFreeQueue.h  KLockQueue.h  KMath.h  KMeshBuilder.h  KNumerical.h  KObjectPool.h  KPlane.h  KPlatform.h  KProcess.h  KReferenceHolder.h  KRunableThread.h  KSectionEnterAssertGuard.h  KSemaphore.h  KSpinLock.h  KStringParser.h  KStringTool.h  KStringUtil.h  KSystem.h  KTaskExecutor.h  KTemplate.h  KThreadPool.h  KThreadTool.h  KTimer.h
KBase/Source/: KDataStream.cpp  KDataStream.h  KIniFile.cpp  KSourceFile.cpp  KThreadTool.cpp
KEditor/: KERenderWidget.cpp  KERenderWidget.h  KEResourceBrowser.cpp  KEResourceBrowser.h  KEResourceBrowser.ui  KEditor.cpp  KEditor.h  KEditor.qrc  KEditor.ui  KEditor.vcxproj  KEditor.vcxproj.filters  KEditorConfig.h  KEditorGlobal.h  KEdtiorGlobal.cpp  main.cpp
KEditor/Browser/: KEFileSystemModel.cpp  KEFileSystemModel.h  KEFileSystemTreeItem.h  KEResourceBrowser.cpp  KEResourceBrowser.h  KEResourceItemWidget.cpp  KEResourceItemWidget.h  KEResourcePathItem.h  KEResourcePathModel.cpp  KEResourcePathModel.h  KEResourceTreeWidget.cpp  KEResourceTreeWidget.h  KEResourceWidgetEventFilter.h
KEditor/Command/: KECommand.h  KECommandInvoker.cpp  KECommandInvoker.h
KEditor/Custom/: KEResourceItemView.cpp  KEResourceItemView.h  KEResourcePathView.cpp  KEResourcePathView.h  KEResourceTreeView.cpp  KEResourceTreeView.h
KEditor/Dialog/: KEAssetConvertDialog.cpp  KEAssetConvertDialog.h
KEngine/: KEngine.vcxproj  KEngine.vcxproj.filters
KPhysics/: KPhysics.vcxproj
KRender/: KRender.vcxproj  KRender.vcxproj.filters  KRenderMain.cpp
KSound/: KSound.vcxproj
Product/: KConfig.ini
(+1807 files in other folders)
